Xholon/src/org/public/lib/antlr4g/RoomParser.js
// Generated from Room.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('xholon/lib/antlr4/index');
var RoomListener = require('./RoomListener').RoomListener;
var grammarFileName = "Room.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'RoomModel'", "'{'", "'}'", "'LogicalSystem'", 
                     "'SubSystemRef'", "'SubSystemClass'", "'LogicalThread'", 
                     "'LayerConnection'", "'ref'", "'satisfied_by'", "'ProtocolClass'", 
                     "'extends'", "'incoming'", "'outgoing'", "'regular'", 
                     "'PortClass'", "'conjugated'", "'CompoundProtocolClass'", 
                     "'SubProtocol'", "':'", "'private'", "'Message'", "'('", 
                     "')'", "'ActorRef'", "'ActorClass'", "'Interface'", 
                     "'Structure'", "'Behavior'", "'StateMachine'", "'DataClass'", 
                     "'impotodo'", null, "'rtypetodo'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "ImportRoom", 
                      "ReferenceType", "MULTIPLICITY", "Documentation", 
                      "ID", "RoomName", "ML_COMMENT", "SL_COMMENT", "WS" ];

var ruleNames =  [ "roomModel", "logicalSystem", "subSystemRef", "subSystemClass", 
                   "logicalThread", "layerConnection", "generalProtocolClass", 
                   "protocolClass", "compoundProtocolClass", "subProtocol", 
                   "message", "varDecl", "portClass", "actorRef", "actorClass", 
                   "structure", "behavior", "stateMachine", "dataClass", 
                   "importedFQN" ];

function RoomParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

RoomParser.prototype = Object.create(antlr4.Parser.prototype);
RoomParser.prototype.constructor = RoomParser;

Object.defineProperty(RoomParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

RoomParser.EOF = antlr4.Token.EOF;
RoomParser.T__0 = 1;
RoomParser.T__1 = 2;
RoomParser.T__2 = 3;
RoomParser.T__3 = 4;
RoomParser.T__4 = 5;
RoomParser.T__5 = 6;
RoomParser.T__6 = 7;
RoomParser.T__7 = 8;
RoomParser.T__8 = 9;
RoomParser.T__9 = 10;
RoomParser.T__10 = 11;
RoomParser.T__11 = 12;
RoomParser.T__12 = 13;
RoomParser.T__13 = 14;
RoomParser.T__14 = 15;
RoomParser.T__15 = 16;
RoomParser.T__16 = 17;
RoomParser.T__17 = 18;
RoomParser.T__18 = 19;
RoomParser.T__19 = 20;
RoomParser.T__20 = 21;
RoomParser.T__21 = 22;
RoomParser.T__22 = 23;
RoomParser.T__23 = 24;
RoomParser.T__24 = 25;
RoomParser.T__25 = 26;
RoomParser.T__26 = 27;
RoomParser.T__27 = 28;
RoomParser.T__28 = 29;
RoomParser.T__29 = 30;
RoomParser.T__30 = 31;
RoomParser.T__31 = 32;
RoomParser.ImportRoom = 33;
RoomParser.ReferenceType = 34;
RoomParser.MULTIPLICITY = 35;
RoomParser.Documentation = 36;
RoomParser.ID = 37;
RoomParser.RoomName = 38;
RoomParser.ML_COMMENT = 39;
RoomParser.SL_COMMENT = 40;
RoomParser.WS = 41;

RoomParser.RULE_roomModel = 0;
RoomParser.RULE_logicalSystem = 1;
RoomParser.RULE_subSystemRef = 2;
RoomParser.RULE_subSystemClass = 3;
RoomParser.RULE_logicalThread = 4;
RoomParser.RULE_layerConnection = 5;
RoomParser.RULE_generalProtocolClass = 6;
RoomParser.RULE_protocolClass = 7;
RoomParser.RULE_compoundProtocolClass = 8;
RoomParser.RULE_subProtocol = 9;
RoomParser.RULE_message = 10;
RoomParser.RULE_varDecl = 11;
RoomParser.RULE_portClass = 12;
RoomParser.RULE_actorRef = 13;
RoomParser.RULE_actorClass = 14;
RoomParser.RULE_structure = 15;
RoomParser.RULE_behavior = 16;
RoomParser.RULE_stateMachine = 17;
RoomParser.RULE_dataClass = 18;
RoomParser.RULE_importedFQN = 19;

function RoomModelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RoomParser.RULE_roomModel;
    return this;
}

RoomModelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RoomModelContext.prototype.constructor = RoomModelContext;

RoomModelContext.prototype.ID = function() {
    return this.getToken(RoomParser.ID, 0);
};

RoomModelContext.prototype.Documentation = function() {
    return this.getToken(RoomParser.Documentation, 0);
};

RoomModelContext.prototype.dataClass = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DataClassContext);
    } else {
        return this.getTypedRuleContext(DataClassContext,i);
    }
};

RoomModelContext.prototype.generalProtocolClass = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(GeneralProtocolClassContext);
    } else {
        return this.getTypedRuleContext(GeneralProtocolClassContext,i);
    }
};

RoomModelContext.prototype.actorClass = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ActorClassContext);
    } else {
        return this.getTypedRuleContext(ActorClassContext,i);
    }
};

RoomModelContext.prototype.subSystemClass = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SubSystemClassContext);
    } else {
        return this.getTypedRuleContext(SubSystemClassContext,i);
    }
};

RoomModelContext.prototype.logicalSystem = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LogicalSystemContext);
    } else {
        return this.getTypedRuleContext(LogicalSystemContext,i);
    }
};

RoomModelContext.prototype.ImportRoom = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RoomParser.ImportRoom);
    } else {
        return this.getToken(RoomParser.ImportRoom, i);
    }
};


RoomModelContext.prototype.enterRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.enterRoomModel(this);
	}
};

RoomModelContext.prototype.exitRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.exitRoomModel(this);
	}
};




RoomParser.RoomModelContext = RoomModelContext;

RoomParser.prototype.roomModel = function() {

    var localctx = new RoomModelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, RoomParser.RULE_roomModel);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 40;
        this.match(RoomParser.T__0);
        this.state = 41;
        this.match(RoomParser.ID);
        this.state = 43;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.Documentation) {
            this.state = 42;
            this.match(RoomParser.Documentation);
        }

        this.state = 45;
        this.match(RoomParser.T__1);
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 4)) & ~0x1f) == 0 && ((1 << (_la - 4)) & ((1 << (RoomParser.T__3 - 4)) | (1 << (RoomParser.T__5 - 4)) | (1 << (RoomParser.T__10 - 4)) | (1 << (RoomParser.T__17 - 4)) | (1 << (RoomParser.T__25 - 4)) | (1 << (RoomParser.T__30 - 4)) | (1 << (RoomParser.ImportRoom - 4)))) !== 0)) {
            this.state = 52;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case RoomParser.T__30:
                this.state = 46;
                this.dataClass();
                break;
            case RoomParser.T__10:
            case RoomParser.T__17:
                this.state = 47;
                this.generalProtocolClass();
                break;
            case RoomParser.T__25:
                this.state = 48;
                this.actorClass();
                break;
            case RoomParser.T__5:
                this.state = 49;
                this.subSystemClass();
                break;
            case RoomParser.T__3:
                this.state = 50;
                this.logicalSystem();
                break;
            case RoomParser.ImportRoom:
                this.state = 51;
                this.match(RoomParser.ImportRoom);
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 56;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 57;
        this.match(RoomParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LogicalSystemContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RoomParser.RULE_logicalSystem;
    return this;
}

LogicalSystemContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LogicalSystemContext.prototype.constructor = LogicalSystemContext;

LogicalSystemContext.prototype.ID = function() {
    return this.getToken(RoomParser.ID, 0);
};

LogicalSystemContext.prototype.subSystemRef = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SubSystemRefContext);
    } else {
        return this.getTypedRuleContext(SubSystemRefContext,i);
    }
};

LogicalSystemContext.prototype.enterRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.enterLogicalSystem(this);
	}
};

LogicalSystemContext.prototype.exitRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.exitLogicalSystem(this);
	}
};




RoomParser.LogicalSystemContext = LogicalSystemContext;

RoomParser.prototype.logicalSystem = function() {

    var localctx = new LogicalSystemContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, RoomParser.RULE_logicalSystem);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 59;
        this.match(RoomParser.T__3);
        this.state = 60;
        this.match(RoomParser.ID);
        this.state = 61;
        this.match(RoomParser.T__1);
        this.state = 65;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RoomParser.T__4) {
            this.state = 62;
            this.subSystemRef();
            this.state = 67;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 68;
        this.match(RoomParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SubSystemRefContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RoomParser.RULE_subSystemRef;
    return this;
}

SubSystemRefContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubSystemRefContext.prototype.constructor = SubSystemRefContext;

SubSystemRefContext.prototype.RoomName = function() {
    return this.getToken(RoomParser.RoomName, 0);
};

SubSystemRefContext.prototype.ID = function() {
    return this.getToken(RoomParser.ID, 0);
};

SubSystemRefContext.prototype.Documentation = function() {
    return this.getToken(RoomParser.Documentation, 0);
};

SubSystemRefContext.prototype.enterRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.enterSubSystemRef(this);
	}
};

SubSystemRefContext.prototype.exitRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.exitSubSystemRef(this);
	}
};




RoomParser.SubSystemRefContext = SubSystemRefContext;

RoomParser.prototype.subSystemRef = function() {

    var localctx = new SubSystemRefContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, RoomParser.RULE_subSystemRef);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70;
        this.match(RoomParser.T__4);
        this.state = 71;
        this.match(RoomParser.RoomName);
        this.state = 72;
        this.match(RoomParser.ID);
        this.state = 74;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.Documentation) {
            this.state = 73;
            this.match(RoomParser.Documentation);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SubSystemClassContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RoomParser.RULE_subSystemClass;
    return this;
}

SubSystemClassContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubSystemClassContext.prototype.constructor = SubSystemClassContext;

SubSystemClassContext.prototype.ID = function() {
    return this.getToken(RoomParser.ID, 0);
};

SubSystemClassContext.prototype.Documentation = function() {
    return this.getToken(RoomParser.Documentation, 0);
};

SubSystemClassContext.prototype.logicalThread = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LogicalThreadContext);
    } else {
        return this.getTypedRuleContext(LogicalThreadContext,i);
    }
};

SubSystemClassContext.prototype.layerConnection = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LayerConnectionContext);
    } else {
        return this.getTypedRuleContext(LayerConnectionContext,i);
    }
};

SubSystemClassContext.prototype.actorRef = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ActorRefContext);
    } else {
        return this.getTypedRuleContext(ActorRefContext,i);
    }
};

SubSystemClassContext.prototype.enterRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.enterSubSystemClass(this);
	}
};

SubSystemClassContext.prototype.exitRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.exitSubSystemClass(this);
	}
};




RoomParser.SubSystemClassContext = SubSystemClassContext;

RoomParser.prototype.subSystemClass = function() {

    var localctx = new SubSystemClassContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, RoomParser.RULE_subSystemClass);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.match(RoomParser.T__5);
        this.state = 77;
        this.match(RoomParser.ID);
        this.state = 79;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.Documentation) {
            this.state = 78;
            this.match(RoomParser.Documentation);
        }

        this.state = 81;
        this.match(RoomParser.T__1);
        this.state = 87;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 7)) & ~0x1f) == 0 && ((1 << (_la - 7)) & ((1 << (RoomParser.T__6 - 7)) | (1 << (RoomParser.T__7 - 7)) | (1 << (RoomParser.T__24 - 7)) | (1 << (RoomParser.ReferenceType - 7)))) !== 0)) {
            this.state = 85;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case RoomParser.T__6:
                this.state = 82;
                this.logicalThread();
                break;
            case RoomParser.T__7:
                this.state = 83;
                this.layerConnection();
                break;
            case RoomParser.T__24:
            case RoomParser.ReferenceType:
                this.state = 84;
                this.actorRef();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 89;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 90;
        this.match(RoomParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LogicalThreadContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RoomParser.RULE_logicalThread;
    return this;
}

LogicalThreadContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LogicalThreadContext.prototype.constructor = LogicalThreadContext;

LogicalThreadContext.prototype.ID = function() {
    return this.getToken(RoomParser.ID, 0);
};

LogicalThreadContext.prototype.enterRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.enterLogicalThread(this);
	}
};

LogicalThreadContext.prototype.exitRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.exitLogicalThread(this);
	}
};




RoomParser.LogicalThreadContext = LogicalThreadContext;

RoomParser.prototype.logicalThread = function() {

    var localctx = new LogicalThreadContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, RoomParser.RULE_logicalThread);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 92;
        this.match(RoomParser.T__6);
        this.state = 93;
        this.match(RoomParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LayerConnectionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RoomParser.RULE_layerConnection;
    return this;
}

LayerConnectionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LayerConnectionContext.prototype.constructor = LayerConnectionContext;

LayerConnectionContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RoomParser.ID);
    } else {
        return this.getToken(RoomParser.ID, i);
    }
};


LayerConnectionContext.prototype.enterRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.enterLayerConnection(this);
	}
};

LayerConnectionContext.prototype.exitRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.exitLayerConnection(this);
	}
};




RoomParser.LayerConnectionContext = LayerConnectionContext;

RoomParser.prototype.layerConnection = function() {

    var localctx = new LayerConnectionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, RoomParser.RULE_layerConnection);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.match(RoomParser.T__7);
        this.state = 96;
        this.match(RoomParser.T__8);
        this.state = 97;
        this.match(RoomParser.ID);
        this.state = 98;
        this.match(RoomParser.T__9);
        this.state = 99;
        this.match(RoomParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GeneralProtocolClassContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RoomParser.RULE_generalProtocolClass;
    return this;
}

GeneralProtocolClassContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GeneralProtocolClassContext.prototype.constructor = GeneralProtocolClassContext;

GeneralProtocolClassContext.prototype.protocolClass = function() {
    return this.getTypedRuleContext(ProtocolClassContext,0);
};

GeneralProtocolClassContext.prototype.compoundProtocolClass = function() {
    return this.getTypedRuleContext(CompoundProtocolClassContext,0);
};

GeneralProtocolClassContext.prototype.enterRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.enterGeneralProtocolClass(this);
	}
};

GeneralProtocolClassContext.prototype.exitRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.exitGeneralProtocolClass(this);
	}
};




RoomParser.GeneralProtocolClassContext = GeneralProtocolClassContext;

RoomParser.prototype.generalProtocolClass = function() {

    var localctx = new GeneralProtocolClassContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, RoomParser.RULE_generalProtocolClass);
    try {
        this.state = 103;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case RoomParser.T__10:
            this.enterOuterAlt(localctx, 1);
            this.state = 101;
            this.protocolClass();
            break;
        case RoomParser.T__17:
            this.enterOuterAlt(localctx, 2);
            this.state = 102;
            this.compoundProtocolClass();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ProtocolClassContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RoomParser.RULE_protocolClass;
    return this;
}

ProtocolClassContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProtocolClassContext.prototype.constructor = ProtocolClassContext;

ProtocolClassContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(RoomParser.ID);
    } else {
        return this.getToken(RoomParser.ID, i);
    }
};


ProtocolClassContext.prototype.Documentation = function() {
    return this.getToken(RoomParser.Documentation, 0);
};

ProtocolClassContext.prototype.portClass = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PortClassContext);
    } else {
        return this.getTypedRuleContext(PortClassContext,i);
    }
};

ProtocolClassContext.prototype.message = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MessageContext);
    } else {
        return this.getTypedRuleContext(MessageContext,i);
    }
};

ProtocolClassContext.prototype.enterRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.enterProtocolClass(this);
	}
};

ProtocolClassContext.prototype.exitRule = function(listener) {
    if(listener instanceof RoomListener ) {
        listener.exitProtocolClass(this);
	}
};




RoomParser.ProtocolClassContext = ProtocolClassContext;

RoomParser.prototype.protocolClass = function() {

    var localctx = new ProtocolClassContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, RoomParser.RULE_protocolClass);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 105;
        this.match(RoomParser.T__10);
        this.state = 106;
        this.match(RoomParser.ID);
        this.state = 108;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.Documentation) {
            this.state = 107;
            this.match(RoomParser.Documentation);
        }

        this.state = 112;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.T__11) {
            this.state = 110;
            this.match(RoomParser.T__11);
            this.state = 111;
            this.match(RoomParser.ID);
        }

        this.state = 114;
        this.match(RoomParser.T__1);
        this.state = 124;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.T__12) {
            this.state = 115;
            this.match(RoomParser.T__12);
            this.state = 116;
            this.match(RoomParser.T__1);
            this.state = 120;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===RoomParser.T__20 || _la===RoomParser.T__21) {
                this.state = 117;
                this.message();
                this.state = 122;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 123;
            this.match(RoomParser.T__2);
        }

        this.state = 135;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.T__13) {
            this.state = 126;
            this.match(RoomParser.T__13);
            this.state = 127;
            this.match(RoomParser.T__1);
            this.state = 131;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===RoomParser.T__20 || _la===RoomParser.T__21) {
                this.state = 128;
                this.message();
                this.state = 133;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 134;
            this.match(RoomParser.T__2);
        }

        this.state = 140;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.T__14) {
            this.state = 137;
            this.match(RoomParser.T__14);
            this.state = 138;
            this.match(RoomParser.T__15);
            this.state = 139;
            this.portClass();
        }

        this.state = 145;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RoomParser.T__16) {
            this.state = 142;
            this.match(RoomParser.T__16);
            this.state = 143;
            this.match(RoomParser.T__15);
            this.state = 144;
            this.portClass();
        }

        this.state = 147;
        this.match(RoomParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
